--- a/angularFrontend/app/features/users/signup.html
+++ b/angularFrontend/app/features/users/signup.html
@@ -17,6 +17,5 @@
 
 <h3>or connect with :</h3>
 <hr>
-<button class="btn btn-primary' ng-click="vm.authenticate('facebook')">Sign in with Facebook</button>
-<button class="btn btn-primary' ng-click="vm.authenticate('google')">Sign in with Google</button>
-<button class="btn btn-primary' ng-click="vm.authenticate('twitter')">Sign in with Twitter</button>
+ <button ng-click="vm.authenticate('facebook')">test</button>
+  <button ng-click="vm.authenticate('twitter')">test</button>
