--- a/angularFrontend/app/features/dashboard/dashboard.html
+++ b/angularFrontend/app/features/dashboard/dashboard.html
@@ -1,2 +1,16 @@
-{{vm.user.displayName}}
-<img src="{{vm.user.picture}}" alt="">
+<div class="row">
+	<div class="col-md-3">
+		<div class="panel panel-info">
+		  <div class="panel-body row">
+			  <div class="col-md-4">
+			<img class="img-responsive img-circle" src="{{vm.user.picture}}" alt="">
+				  
+			  </div>
+		    Panel content
+		  </div>
+		  <div class="panel-footer panel-primary">{{vm.user.displayName}}</div>
+		</div>
+	</div>
+</div>
+
+<div class="btn btn-default" ng-click="vm.logout()">Logout</div>
