--- a/angularFrontend/app/index.html
+++ b/angularFrontend/app/index.html
@@ -7,40 +7,34 @@
 </head>
 <body >
 	<div class="site-wrapper">
-
-      <div class="site-wrapper-inner">
-
-        <div class="cover-container">
-
-          <div class="masthead clearfix">
-            <div class="inner">
-              <h3 class="masthead-brand">Methodized Planner</h3>
-              <nav>
-                <ul class="nav masthead-nav">
-                  <li><a ui-sref="home">Home</a></li>
-                  <li><a ui-sref="features">Features</a></li>
-                  <li><a ui-sref="contactus"">Contact</a></li>
-                  <li><a ui-sref="login">Login</a></li>
-                  <li><a ui-sref="dashboard">temp Link</a></li>
-                </ul>
-              </nav>
-            </div>
-              <hr>
+     <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">Methodized Planner</a>
           </div>
-
-      <ui-view></ui-view>
-          <div class="mastfoot">
-            <div class="inner">
-             <p>By Jason Woods</p>
-            </div>
+      
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+              <li><a ui-sref="home">Home</a></li>
+              <li><a ui-sref="features">Features</a></li>
+              <li><a ui-sref="contactus"">Contact</a></li>
+              <li><a ui-sref="login">Login</a></li>
+              <li><a ui-sref="dashboard">temp Link</a></li>
+            </ul>
           </div>
-
         </div>
-
+      </nav>
+      <div class="container">
+         <ui-view></ui-view>
       </div>
-
+     
     </div>
-	
 	<script src="bundle.js"></script>
 </body>
 </html>
