--- a/angularFrontend/app/index.html
+++ b/angularFrontend/app/index.html
@@ -4,37 +4,13 @@
 	<meta charset="UTF-8">
 	<title>Methodize Planner</title>
 	<link rel="stylesheet" href="./styles/bootstrap.min.css">
+	<link rel="stylesheet" href="./styles/main.css">
 </head>
 <body >
-	<div class="site-wrapper">
-     <nav class="navbar navbar-default">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">Methodized Planner</a>
-          </div>
-      
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-              <li><a ui-sref="home">Home</a></li>
-              <li><a ui-sref="features">Features</a></li>
-              <li><a ui-sref="contactus"">Contact</a></li>
-              <li><a ui-sref="login">Login</a></li>
-              <li><a ui-sref="dashboard">temp Link</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <div class="container">
-         <ui-view></ui-view>
-      </div>
-     
-    </div>
+    <ui-view></ui-view>
+<footer>
+	By Jason Woods
+</footer>
 	<script src="bundle.js"></script>
 </body>
 </html>
