--- a/angularFrontend/app/features/users/login.html
+++ b/angularFrontend/app/features/users/login.html
@@ -1,15 +1,37 @@
-<form class="form-signin" ng-submit="vm.login()">
-    <h2 class="form-signin-heading">Please sign in</h2>
-    <label for="inputEmail"  ng-model="vm.email" class="sr-only">Email address</label>
-    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-    <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" ng-model="vm.password" id="inputPassword" class="form-control" placeholder="Password" required>
-    <div class="checkbox">
-      <label>
-        <input type="checkbox" value="remember-me"> Remember me
-      </label>
+<div class="container">
+  <div class="login-form">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h2 class="panel-title">Login</h2>
+      </div>
+      <div class="panel-body">
+        <form ng-submit="vm.login()" class="clearfix">
+          <div class="form-group">
+            <label for="email">Email: </label>
+            <input type="email" class="form-control" id="email" placeholder="Joe123@gmail.com" ng-model="vm.email">
+          </div>
+          <div class="form-group">
+            <label for="password">Password: </label>
+            <input type="password" class="form-control" id="password" ng-model="vm.password" required>
+          </div>
+          <button class="btn btn-warning pull-left">Cancel</button>
+          <button class="btn btn-success pull-right">Submit</button>
+        </form>
+        <br>
+        <p class="lead">Dont have an account? <button class="btn btn-default btn-sm" ui-sref="signup" >Sign Up</button></p>
+      </div>
     </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-  </form>
-  <button ng-click="vm.authenticate('facebook')">test</button>
-  <button ng-click="vm.authenticate('twitter')">test</button>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h2 class="panel-title">Social Login</h2>
+      </div>
+      <div class="panel-body">
+        <form >
+          <div class="form-group">
+            <button class="btn btn-default" ng-click="vm.authenticate('facebook')" >Facebook</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
