--- a/angularFrontend/app/features/home/home.html
+++ b/angularFrontend/app/features/home/home.html
@@ -28,7 +28,8 @@
  </div>
 	
 <div class="even-row">
-    <form class="form-contact">
+  <a class="btn btn-default" ng-click="showForm = !showForm">Contact us</a>
+    <form class="form-contact " ng-show="showForm">
     <h2 class="form-contact-heading">Pleae send us an email.</h2>
     <label for="inputEmail" class="sr-only">Email address</label>
     <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
