--- a/angularFrontend/app/features/users/login.html
+++ b/angularFrontend/app/features/users/login.html
@@ -14,7 +14,7 @@
             <label for="password">Password: </label>
             <input type="password" class="form-control" id="password" ng-model="vm.password" required>
           </div>
-          <button class="btn btn-warning pull-left">Cancel</button>
+          <button class="btn btn-warning pull-left"ui-sref="home">Cancel</button>
           <button class="btn btn-success pull-right">Submit</button>
         </form>
         <br>
