--- a/angularFrontend/app/index.html
+++ b/angularFrontend/app/index.html
@@ -5,6 +5,7 @@
 	<title>Methodize Planner</title>
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="./styles/bootstrap.min.css">
+	<link rel="stylesheet" href="./styles/fullcalendar.css">
 	<link rel="stylesheet" href="./styles/main.css">
 </head>
 <body >
