--- a/.tmp/public/dashboard/events/bottom-sheet.html
+++ b/.tmp/public/dashboard/events/bottom-sheet.html
@@ -1,11 +1,47 @@
 <md-bottom-sheet class="md-list md-has-header">
-  <md-subheader>Comment Actions</md-subheader>
-  <md-list>
-    <md-list-item ng-repeat="item in items">
-      <md-button class="md-list-item-content" ng-click="listItemClick($index)">
-        <md-icon md-svg-src="{{item.icon}}"></md-icon>
-        <span class="md-inline-list-icon-label">{{ item.name }}</span>
-      </md-button>
-    </md-list-item>
-  </md-list>
+  <form class="form-horizontal">
+    <div class="form-group">
+      <label for="title" class="col-sm-2 control-label">Title</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" id="title" placeholder="Title" ng-model="dashboard.title">
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="start" class="col-sm-2 control-label">Start Time</label>
+      <div class="col-sm-10">
+        <input type="date" class="date" id="start" ng-model="dashboard.startTime">
+      </div>
+      <div class="form-group">
+        <label for="end" class="col-sm-2 control-label">End Time</label>
+        <div class="col-sm-10">
+          <input type="date" class="form-control" id="end" ng-model="dashboard.endTime">
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <div class="checkbox">
+            <label>
+              <input type="checkbox" ng-model='dashboard.allDay'> All Day?
+            </label>
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <div class="checkbox">
+            <label>
+              <input type="checkbox" ng-model='dashboard.isEditable'> Editable
+            </label>
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <select ng-model='dashboard.group' class='form-control'>
+            <option ng-repeate ="grp in dashboard.groups" value="{{grp.id}}">{{grp.name}}</option>
+          </select>
+        </div>
+      </div>
+  </form>
+  <button type="button" class=" btn-flat" ng-click="dashboard.scheduleEvent()">Save</button>
 </md-bottom-sheet>
