--- a/.tmp/public/index.html
+++ b/.tmp/public/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Methodize Planner</title>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="./styles/fullcalendar.css">
 	<link rel="stylesheet" href="./styles/materialize.css">
 	<link rel="stylesheet" href="./styles/angular-material.css">
